--- a/index.html
+++ b/index.html
@@ -9,26 +9,43 @@
 
 
   </head>
+  <meta charset="utf-8"/>
   <body>
 
+  <div class="home">
 
     <div class="row">
 
-      <div class="col-3">
+      <div class="offset-1 col-3">
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/omar_victor_diop.html">
-          <img src="img/immagini/1.jpg" class="immagine sinistra">
+          <img src="img/immagini/1.jpg" class="immagine">
+          <div class="messaggio">
+            <div class="omar">
+              <h1>  Omar <br> Victor <br> Diop </h1>
+            </div>
+          </div>
         </a>
       </div>
 
-      <div class="offset-1 col-4">
+      <div class="col-4">
          <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/chris_buck.html">
            <img src="img/immagini/2.jpg" class="immagine">
+           <div class="messaggio">
+             <div class="chris">
+               <h1> Chris Buck <br> in Oprah Magazine </h1>
+             </div>
+           </div>
          </a>
       </div>
 
-       <div class="offset-1 col-3">
+       <div class="col-3">
          <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/sanford_biggers.html">
-           <img src="img/immagini/3.jpg" class="immagine destrissima">
+           <img src="img/immagini/3.jpg" class="immagine">
+           <div class="messaggio">
+              <div class="biggers">
+                <h1> Sanford <br> Biggers </h1>
+              </div>
+           </div>
          </a>
        </div>
 
@@ -36,15 +53,25 @@
 
     <div class="row">
 
-     <div class="col-3">
+     <div class="offset-1 col-3">
         <a href ="file:///Users/nicolanotarnicola1/Desktop/SITO_2/peter_devito.html">
-          <img src="img/immagini/4.jpg" class="immagine sinistra feroce">
+          <img src="img/immagini/4.jpg" class="immagine">
+          <div class="messaggio">
+              <div class="peter">
+                <h1> Peter <br> Sanford <br> De Vito </h1>
+              </div>
+          </div>
         </a>
       </div>
 
-       <div class="offset-1 col-7">
+       <div class="col-7">
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/angelica_dass.html">
-          <img src="img/immagini/5.jpg" class="immagine angelica">
+          <img src="img/immagini/5.jpg" class="immagine">
+          <div class="messaggio">
+              <div class="angelica">
+                <h1> Humanae <br> Angelica Dass </h1>
+              </div>
+          </div>
         </a>
       </div>
 
@@ -52,33 +79,59 @@
 
      <div class="row">
 
-       <div class="col-6">
+       <div class="offset-1 col-6">
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/winnie_harlow.html">
-          <img src="img/immagini/9.jpg" class="immagine sinistra">
+          <img src="img/immagini/9.jpg" class="immagine">
+          <div class="messaggio">
+              <div class="winnie">
+                <h1> Winnie <br> Harlow </h1>
+              </div>
+          </div>
         </a>
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/gemelle.html">
-          <img src="img/immagini/10.jpg" class="immagine sinistra">
+          <img src="img/immagini/10.jpg" class="immagine">
+          <div class="messaggio">
+            <div class="modo">
+              <h1> "OGNUNO È FATTO <br> A MODO SUO" </h1>
+            </div>
+          </div>
         </a>
       </div>
 
-      <div class="offset-1 col-4">
+      <div class="col-4">
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/mellody_hobson.html">
           <img src="img/immagini/7.jpg" class="immagine">
+          <div class="messaggio">
+            <h1> Mellody <br> Hobson </h1>
+          </div>
         </a>
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/leggi.html">
           <img src="img/immagini/12.jpg" class="immagine">
+          <div class="messaggio">
+            <div class="leggi">
+              <h1> Le Leggi Raziali <br>Del 1938 </h1>
+            </div>
+          </div>
         </a>
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/scienza.html">
           <img src="img/immagini/11.jpg" class="immagine">
+          <div class="messaggio">
+            <div class="scientifico">
+              <h1> Razzismo <br> Scientifico </h1>
+            </div>
+          </div>
         </a>
         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/miriam_perez.html">
           <img src="img/immagini/8.jpg" class="immagine">
+          <div class="messaggio">
+            <h1> Miriam Zoila Perez </h1>
+          </div>
         </a>
       </div>
 
     </div>
 
-
+  </div>
 
 
 
