--- a/sanford_biggers.html
+++ b/sanford_biggers.html
@@ -110,6 +110,12 @@
    </div>
 
 
+   <div class="bottone">
+         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/index.html">
+           <button type="button" class="btn btn-outline-secondary btn-lg bottone_sanford"> Torna all Home </button>
+         </a>
+   </div>
+
 
 
 
