--- a/verna_myers.html
+++ b/verna_myers.html
@@ -100,7 +100,11 @@
    </div>
 
 
-
+   <div class="bottone">
+         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/index.html">
+           <button type="button" class="btn btn-outline-secondary btn-lg bottone_verna"> Torna all Home </button>
+         </a>
+   </div>
 
 
       <div class="row">
