--- a/gemelle.html
+++ b/gemelle.html
@@ -67,6 +67,11 @@
      </div>
    </div>
 
+   <div class="bottone">
+         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/index.html">
+           <button type="button" class="btn btn-outline-secondary btn-lg bottone_gemelle"> Torna all Home </button>
+         </a>
+   </div>
 
 
 
