--- a/peter_devito.html
+++ b/peter_devito.html
@@ -101,7 +101,11 @@
     </div>
    </div>
 
-
+   <div class="bottone">
+         <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/index.html">
+           <button type="button" class="btn btn-outline-secondary btn-lg bottone_peter"> Torna all Home </button>
+         </a>
+   </div>
 
 
 
