--- a/scienza.html
+++ b/scienza.html
@@ -97,6 +97,11 @@
 </div>
 </div>
 
+<div class="bottone">
+      <a href="file:///Users/nicolanotarnicola1/Desktop/SITO_2/index.html">
+        <button type="button" class="btn btn-outline-secondary btn-lg bottone_leggi"> Torna all Home </button>
+      </a>
+</div>
 
 
     <script src="js/jquery.min.js"></script>
